--- a/ww_sheets.html
+++ b/ww_sheets.html
@@ -87,11 +87,11 @@
 
   <!-- Sheets images -->
   <div class="sheet-container">
-    <img src="Sheet1_BYOB_ZERO_WORDWALL_BOSA_V1.png" alt="Sheet 1">
-    <img src="Sheet2_BYOB_ZERO_WORDWALL_BOSA_V1.png" alt="Sheet 2">
-    <img src="Sheet3_BYOB_ZERO_WORDWALL_BOSA_V1.png" alt="Sheet 3">
-    <img src="Sheet4_BYOB_ZERO_WORDWALL_BOSA_V1.png" alt="Sheet 4">
-    <img src="Sheet5_BYOB_ZERO_WORDWALL_BOSA_V1.png" alt="Sheet 5">
+    <img src="BOSA_Sheet1.png" alt="Sheet 1">
+    <img src="BOSA_Sheet2.png" alt="Sheet 2">
+    <img src="BOSA_Sheet3.png" alt="Sheet 3">
+    <img src="BOSA_Sheet4.png" alt="Sheet 4">
+    <img src="BOSA_Sheet5.png" alt="Sheet 5">
   </div>
   
 
