--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@ If you do not understand these risks, do not proceed.
   <a class="button" href="btc_capture.html">CAPTURE</a>
   <a class="button" href="ledger.html">LEDGER</a>
   <a class="button" href="qr_translator.html">QR TRANSLATOR</a>
-
+  <a class="button" href="compiler.html">COMPILER</a>
   
   <footer>
     &copy; 2026 BYOB Project. All rights reserved.
